# ogre21-tutorial

./: CMakeLists.txt  main.cpp
